# second-brain

./: .gitignore  ARCHITECTURE.md  INDEX.md  README.md  config.example.toml  pyproject.toml
.brain/: changelog.jsonl  state.json
50-sources/: 2026-06-19-michael-jackson---off-the-wall-audio.md
90-wiki/: art---exhibition-curation.md  creative-prompts---generative-seeds.md  inner-worlds---spatial-metaphor.md  introspection---self-reflection.md  lyrical---poetic-fragments.md
docs/: transcript_f_iWrXDpUkw.txt
scripts/: batch_ingest.py  batch_ingest_vtts.py  check_mdc_deadletter.py  clear_vtt_state.py  inspect_health.py  list_inbox_tiers.py  repair_l2.py  run_live_evals.py
src/second_brain/: __init__.py  atomicio.py  cli.py  config.py  frontmatter.py  log.py  models.py  openrouter_client.py  reasoning.py  rebuild.py  slug.py  state.py
src/second_brain/chat/: __init__.py  agent.py
src/second_brain/compact/: __init__.py  compaction.py  dedup.py  eval.py
src/second_brain/daemon/: __init__.py  api.py  extract.py  index.py  linker.py  normalize.py  pipeline.py  router.py  scheduler.py  watcher.py  wiki.py
src/second_brain/parse/: __init__.py  audio.py  csv_table.py  ebook.py  image.py  office.py  pdf.py  text.py  video.py  vtt.py  web.py
src/second_brain/vectors/: __init__.py  embed.py  reconcile.py  retrieval.py  store.py  swap.py
src/second_brain/web/: __init__.py  app.py  infobox.py  (+3 more)
tests/: conftest.py  test_architecture_remediation.py  test_embedding_swap.py  test_observability.py  test_phase0.py  test_phase1a.py  test_phase1b.py  test_phase2_neardup.py  test_phase2_pipeline.py  test_phase2a.py  test_phase2b.py  test_phase3_daemon_api.py  test_phase3a.py  test_phase3b_stt.py  test_phase3b_stt_hardening.py  test_phase3b_vision.py  test_phase4.py  test_phase4_scheduler.py  test_phase5_rebuild.py  test_phase5a.py  test_phase5b.py  test_phase6.py  test_pipeline_containment.py  test_reasoning.py  test_structured_summary.py
(+7 files in other folders)
