[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "second-brain"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings",
    "httpx",
    "keyring",
    "typer",
    "structlog",
    "anyio",
    "pyyaml",
    "watchdog",
    "tenacity",
    "sqlite-vec",
    "numpy",
    "pymupdf",
    "mammoth",
    "readability-lxml",
    "mistune>=3",
    "jinja2>=3",
    "fastapi>=0.135",
    "uvicorn[standard]",
    "python-multipart",
    "pydantic-ai",
    "openpyxl>=3.1.5",
    "python-pptx>=1.0.2",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "pytest-asyncio",
    "mypy",
    "uv",
]

[project.scripts]
brain = "second_brain.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "N"]

[tool.ruff.lint.isort]
known-first-party = ["second_brain"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
